垃圾回收器特点的修改